--- a/2/catalog.html
+++ b/2/catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Гостиницы Седоны</title>
+    <title>Седона — Гостиницы</title>
     <base href="https://htmlacademy-htmlcss.github.io/2368061-sedona-37/2/">
 </head>
   <body>
@@ -24,7 +24,7 @@
         </ul>
         <ul class="nav__list nav__list--user">
           <li class="nav__item">
-            <button class="nav__button nav__button--search" type="button">Поиск</button>
+            <button class="nav__button" type="button">Поиск</button>
           </li>
           <li class="nav__item">
             <a class="nav__button nav__button--favorites" href="#">
@@ -104,7 +104,7 @@
             <legend class="form-filter__legend">Стоимость, ₽:</legend>
             <label class="form-filter__label">
               <span class="form-filter__span">от</span>
-              <input class="form-filter__input form-filter__input--price-from" type="number" name="price-from" min="0"
+              <input class="form-filter__input" type="number" name="price-from" min="0"
                 max="11500" placeholder="0">
             </label>
             <label class="form-filter__label">
@@ -114,7 +114,7 @@
             </label>
           </fieldset>
           <div class="form-filter__fieldset">
-            <button class="form-filter__button form-filter__button--apply button button--blue"
+            <button class="form-filter__button button button--blue"
               type="submit">Применить</button>
             <button class="form-filter__button form-filter__button--reset button button--transp"
               type="reset">Сбросить</button>
@@ -155,7 +155,7 @@
               <span class="item-catalog__housing">Гостиница</span>
               <span class="item-catalog__price">От 4000 ₽</span>
             </p>
-            <a class="item-catalog__button item-catalog__button--more button" href="#">Подробнее</a>
+            <a class="item-catalog__button button" href="#">Подробнее</a>
             <button class="item-catalog__button item-catalog__button--favorite button button--blue" type="button">В
               избранное</button>
             <p class="item-catalog__rating-wrapper">
@@ -172,7 +172,7 @@
               <span class="item-catalog__housing">Гостиница</span>
               <span class="item-catalog__price">От 5000 ₽</span>
             </p>
-            <a class="item-catalog__button item-catalog__button--more button" href="#">Подробнее</a>
+            <a class="item-catalog__button button" href="#">Подробнее</a>
             <button
               class="item-catalog__button item-catalog__button--favorite item-catalog__button--favorite--active button button--green"
               type="button">В избранном</button>
@@ -191,7 +191,7 @@
               <span class="item-catalog__housing">Гостиница</span>
               <span class="item-catalog__price">От 2500 ₽</span>
             </p>
-            <a class="item-catalog__button item-catalog__button--more button" href="#">Подробнее</a>
+            <a class="item-catalog__button button" href="#">Подробнее</a>
             <button class="item-catalog__button item-catalog__button--favorite button button--blue" type="button">В
               избранное</button>
             <p class="item-catalog__rating-wrapper">
@@ -208,7 +208,7 @@
               <span class="item-catalog__housing">Гостиница</span>
               <span class="item-catalog__price">От 1500 ₽</span>
             </p>
-            <a class="item-catalog__button item-catalog__button--more button" href="#">Подробнее</a>
+            <a class="item-catalog__button button" href="#">Подробнее</a>
             <button class="item-catalog__button item-catalog__button--favorite button button--blue" type="button">В
               избранное</button>
             <p class="item-catalog__rating-wrapper">
