--- a/2/index.html
+++ b/2/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Седона</title>
     <base href="https://htmlacademy-htmlcss.github.io/2368061-sedona-37/2/">
 </head>
   <body>
@@ -24,7 +24,7 @@
         </ul>
         <ul class="nav__list nav__list--user">
           <li class="nav__item">
-            <button class="nav__button nav__button--search" type="button">Поиск</button>
+            <button class="nav__button" type="button">Поиск</button>
           </li>
           <li class="nav__item">
             <a class="nav__button nav__button--favorites" href="#">
