--- a/2/catalog.html
+++ b/2/catalog.html
@@ -8,7 +8,7 @@
   <body>
     <header class="page-header" data-test="header">
       <nav class="nav">
-        <a class="nav__logo" href="index.html" aria-label="Главная страница">
+        <a class="nav__logo" href="index.html" aria-label="Главная страница.">
           <img class="nav__img" src="#" alt="Логотип города Седона.">
         </a>
         <ul class="nav__list">
@@ -30,7 +30,7 @@
             <a class="nav__button nav__button--favorites" href="#">
               <span class="visually-hidden">Избранное </span>
               <span class="nav__favorites">12</span>
-              <span class="visually-hidden">гостиниц</span>
+              <span class="visually-hidden">гостиниц.</span>
             </a>
           </li>
           <li class="nav__item">
@@ -46,7 +46,7 @@
         <ol class="filter__breadcrumbs breadcrumbs-filter">
           <li class="breadcrumbs-filter__item">
             <a class="breadcrumbs-filter__link breadcrumbs-filter__link--main" href="index.html">
-              <span class="visually-hidden">Главная</span>
+              <span class="visually-hidden">Главная.</span>
             </a>
           </li>
           <li class="breadcrumbs-filter__item">
@@ -123,7 +123,7 @@
       </section>
       <section class="catalog" data-test="catalog">
         <h2>Найдено гостиниц: 38</h2>
-        <select class="catalog__select" name="select-sort" aria-label="Сортировка">
+        <select class="catalog__select" name="select-sort" aria-label="Сортировка.">
           <option value="popular">Сначала популярные</option>
           <option value="cheap" selected>Сначала дешевые</option>
           <option value="expensive">Сначала дорогие</option>
@@ -131,17 +131,17 @@
         <ul class="catalog__button-list button-list-catalog">
           <li class="button-list-catalog__item">
             <a class="catalog__button catalog__button--tile catalog__button--active" href="#">
-              <span class="visually-hidden">Показать плитки</span>
+              <span class="visually-hidden">Показать плитки.</span>
             </a>
           </li>
           <li class="button-list-catalog__item">
             <a class="catalog__button catalog__button--slideshow" href="#">
-              <span class="visually-hidden">Показать слайдер</span>
+              <span class="visually-hidden">Показать слайдер.</span>
             </a>
           </li>
           <li class="button-list-catalog__item">
             <a class="catalog__button catalog__button--list" href="#">
-              <span class="visually-hidden">Показать список</span>
+              <span class="visually-hidden">Показать список.</span>
             </a>
           </li>
         </ul>
@@ -217,7 +217,7 @@
             </p>
           </li>
         </ul>
-        <ul class="catalog__pagination pagination-catalog" aria-label="Постраничное разделение каталога гостиниц">
+        <ul class="catalog__pagination pagination-catalog" aria-label="Постраничное разделение каталога гостиниц.">
           <li class="pagination-catalog__item">
             <a class="pagination-catalog__link pagination-catalog__link--current">1</a>
           </li>
@@ -250,18 +250,18 @@
       <ul class="page-footer__socials socials-footer">
         <li class="socials-footer__item">
           <a class="socials-footer__link socials-footer__link--vk" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">ВКонтакте</span>
+            <span class="visually-hidden">ВКонтакте.</span>
           </a>
         </li>
         <li class="socials-footer__item">
           <a class="socials-footer__link socials-footer__link--telegram" href="https://t.me/htmlacademy">
-            <span class="visually-hidden">Telegram</span>
+            <span class="visually-hidden">Telegram.</span>
           </a>
         </li>
         <li class="socials-footer__item">
           <a class="socials-footer__link socials-footer__link--youtube"
             href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually-hidden">YouTube</span>
+            <span class="visually-hidden">YouTube.</span>
           </a>
         </li>
       </ul>
