--- a/5/catalog.html
+++ b/5/catalog.html
@@ -119,7 +119,7 @@
           </section>
         </div>
         <section class="catalog" data-test="catalog">
-          <div class="catalog__first-line-wrapper">
+          <header class="catalog__header">
             <h2 class="main__subhead catalog__title">Найдено гостиниц: 38</h2>
             <select class="catalog__sort" name="select-sort" aria-label="Сортировка">
               <option class="catalog__option" value="popular">Сначала популярные</option>
@@ -143,7 +143,7 @@
                 </a>
               </li>
             </ul>
-          </div>
+          </header>
           <ul class="catalog__list">
             <li class="hotel catalog__item">
               <a class="hotel__link-title" href="#">
